--- a/public/index.html
+++ b/public/index.html
@@ -2,32 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="icon" type="image/png" href="/static/deezilogo.png" />
+  <meta property="og:image" content="https://deezisoft.com/static/deezilogo.png">
+  <meta name="description" content="Software and Design solutions with Innovative and streamlined approach" />
+  <link rel="apple-touch-icon" href="/static/deezilogo.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <title>Deezisoft - IT Solutions</title>
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Software development | Graphics | Video Editing">
+  <meta property="og:description"
+    content="An organization of tech enthusiasts to provide technology based solutions. Ranging form websites/software development, mobile applications, Graphics designs, creatives, video editings, motion graphics etc. We take care of the whole process for you with over 400 successful developments. 100% Guaranteed">
+  <meta property="og:url" content="https://deezisoft.com">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:description"
+    content="An organization of tech enthusiasts to provide technology based solutions. Ranging form websites/software development, mobile applications, Graphics designs, creatives, video editings, motion graphics etc. We take care of the whole process for you with over 400 successful developments. 100% Guaranteed">
+  <meta name="twitter:title" content="Software development | Graphics | Video Editing">
+  <link rel="apple-touch-icon" href="logo192.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Open - React Template</title>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>Deezisoft - IT Solutions</title>
 </head>
 
 <body class="has-animations">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="body-wrap"></div>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root" class="body-wrap">
+
+  </div>
 </body>
 
 </html>
